--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
        </li>
         <li> 
         <p> Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <a href="  #">lacinia</a> consectetur</p>
-         <a href="" class="btn odernow mr-3">Download Now</a> 
+         <a href="" class="btn odernow mr-3">Order Now</a> 
         </li>
       </ul>
     </div>
@@ -406,7 +406,7 @@
        <p class=" p"> /permonth</p></li>
         <li> 
         <p> Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <a href="  #">lacinia</a> consectetur</p>
-         <a href="" class="btn odernow mr-3">Download Now</a> 
+         <a href="" class="btn odernow mr-3">Order Now</a> 
         </li>
       </ul>
     </div>
@@ -422,7 +422,7 @@
        <p class=" p"> /permonth</p></li>
         <li> 
         <p> Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <a href="  #">lacinia</a> consectetur</p>
-         <a href="" class="btn odernow mr-3">Download Now</a> 
+         <a href="" class="btn odernow mr-3">Order Now</a> 
         </li>
       </ul>
     </div>
@@ -438,7 +438,7 @@
        <p class=" p"> /permonth</p></li>
         <li> 
         <p> Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <a href="  #">lacinia</a> consectetur</p>
-         <a href="" class="btn odernow mr-3">Download Now</a> 
+         <a href="" class="btn odernow mr-3">Order Now</a> 
         </li>
       </ul>
     </div>
